# rustify

./: Cargo.toml  docker-compose.yml
migrations/: 20251028172505_init.down.sql  20251028172505_init.up.sql  20251031174204_todos.down.sql  20251031174204_todos.up.sql
src/: errors.rs  main.rs
src/models/: mod.rs  todos.rs
src/postgres/: mod.rs
src/postgres/todos/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
src/routes/: create.rs  delete.rs  fetch.rs  mod.rs  update.rs
todo/: createtodo.bru  delete.bru  fetch.bru  update to.bru
