[package]
name = "rustify"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4","serde"] }
chrono = { version = "0.4.41", features= ["serde"] }
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "uuid", "migrate"] }
validator = { version = "0.20", features = ["derive"]}
snafu = "0.8.4"
serde_json = "1.0.142"
